--- a/index.html
+++ b/index.html
@@ -232,6 +232,6 @@
           </nav>
     </div>
  
-    <script src="src/js/index.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
